[package]
name = "halio"
version = "0.1.0-alpha-1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Hardware abstraction layer for embedded devices with non-blocking tasks and IO"
repository = "https://github.com/matthunz/async-hal"

[features]
embedded-hal = []
full = ["embedded-hal"]

[dependencies]
embedded-hal = "0.2.7"
nb = { version = "1.1.0", optional = true }
pin-project-lite = "0.2.9"
taskio = { version = "0.1.0-alpha-1", features = ["full"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
